--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,13 +19,87 @@ code {
   flex-direction: column;  
 }
 
-.card-container {
-  display: grid;
-  
-  width: 300px;
-  margin-bottom: 20px;
-  border: 2px solid #000; 
+.happy-thought-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #000; 
   box-shadow: 10px 10px #000;
+  margin: 10px;
+  padding: 20px; 
+  width: 300px;
+  background-color: #f2f0f0;
+}
+
+.happy-thought-form input[type="text"] {
+  height: 44px;
+  margin: 10px 0;
+  width: 100%;  
+}
+
+.send-thought-button {
+  display: flex;
+  align-self: flex-start;
+  padding: 5px;
+  border-radius: 20px;
+  border: none;
+  background-color: #ffadad ;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.card-container {
+  display: grid;  
+  width: 300px;  
+  border: 1px solid #000; 
+  box-shadow: 10px 10px #000;
+  margin: 25px;
+  padding: 20px;
+}
+
+.container-bottom-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: auto;    
+}
+
+.thought-text {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  width: 100%;
+  overflow-wrap: break-word;
+}
+
+.like-button {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;  
+  padding: 20px;
+  margin: 16px 0;
+  border: none;
+  background-color: #eaeaea;
+  cursor: pointer;
+  grid-column-start: 1;
+  grid-column-end: 2;  
+}
+
+.liked {
+  background-color: #ffadad ;
+}
+
+.thought-post-time {
+  grid-column-start: -1;
+  /* grid-column-end: -1;  */
+  margin-top: 25px;
+}
+
+.like-counter {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  margin-top: 25px;
 }
 
 .lds-heart {
