--- a/code/src/components/Styles/Header.css
+++ b/code/src/components/Styles/Header.css
@@ -1,7 +1,63 @@
-.header-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    margin: 50px 0px;
+.header-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 60px;
+}
 
+.wrapper-heart {
+  display: flex;
+  position: absolute;
+  margin-top: 88px;
+  animation: pulse 1s infinite;
+}
+
+.pulsing-heart {
+  position: relative;
+  width: 30px;
+  height: 20px;
+}
+
+.pulsing-heart:before,
+.pulsing-heart:after {
+  position: absolute;
+  content: "";
+  left: 34px;
+  top: 0;
+  width: 34px;
+  height: 51px;
+  background: #aa0000;
+  border-radius: 30px 30px 0 0;
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+  animation: pulsecolor 1s infinite;
+}
+
+.pulsing-heart:after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
+  animation: pulsecolor 1s infinite;
+}
+
+@keyframes pulse {
+  10% {
+    transform: scale(1.1);
+  }
+}
+
+@keyframes pulsecolor {
+  10% {
+    background: #dd0000;
+  }
+}
+
+@media (min-width: 768px) {
+  .header-wrapper {
+    margin-bottom: 10px;
+  }
+  .wrapper-heart {
+    margin-left: 350px;
+    margin-top: -20px;
+  }
 }
