--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,10 +17,12 @@ code {
   font-weight: 400;
 }
 
+/**********FORM***********/
+
 .form,
 .thought-card
 {
-  border: 2px solid darkgray;
+  border: 3px solid darkgray;
   margin: 30px;
   max-width: 400px;
   padding: 16px;
@@ -33,22 +35,90 @@ code {
   flex-direction: column;
 }
 
-input {
+textarea {
   border: 1px solid darkgray;
-  height: 60px;
   box-sizing: border-box;
   width: 100%;
+  height: 50px;
+  padding: 10px;
+}
+
+.form p {
+  margin:0 0 0 4px;
+  opacity: 0.6;
+}
+
+.counter {
+  color: red;
+}
+
+span {
+  font-weight: bold;
+}
+
+.too-long {
+  display: none;
+}
+
+.too-short {
+  display: none;
+}
+
+button {
+  border: none;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 .form button {
   background-color: #FFADAD;
-  border: none;
-  padding: 10px 15px;
+  padding: 12px 15px;
   border-radius: 25px;
   margin: 12px 0px;
-  width: 50%;
+  max-width: 200px;
+  font-family: 'Inconsolata', monospace;
+  font-weight: bold;
 }
+
+/*********THOUGHTS*********/
 
 .thought-card {
   overflow-wrap: break-word;
+}
+
+.card-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-info p {
+  color: #808080; 
+  font-weight: bold;
+}
+
+.likes {
+  display: flex;
+}
+
+.like-button {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  margin: 0 10px 0 0;
+  font-size: 18px;
+}
+
+.liked {
+  background-color: #FFADAD;
+}
+
+.super-liked {
+  background-color: #f17474;
+}
+
+.post-time {
+  opacity: 0.4;
 }
