--- a/code/src/index.css
+++ b/code/src/index.css
@@ -105,6 +105,8 @@ code {
 
 .date{
   text-align: right;
+  font-size: 14px;
+  font-style: italic;
 }
 
 .likes-container{
@@ -113,7 +115,7 @@ code {
 
 .heart-button {
   width: 50px;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   padding: 0;
   color: red;
@@ -121,6 +123,7 @@ code {
   border-radius: 50%;
   margin-right: 10px;
   outline: none;
+  font-family: Trispace;
 }
 
 .pink {
