--- a/code/src/components/Styles/Header.css
+++ b/code/src/components/Styles/Header.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  width: 300px;
   margin-bottom: 100px;
   
 }
@@ -60,4 +61,10 @@
     margin-left: 350px;
     margin-top: -20px;
   }
+}
+
+@media (min-width: 768px){
+    .header-wrapper {
+        width: 500px;
+    }
 }
