--- a/code/src/index.css
+++ b/code/src/index.css
@@ -25,11 +25,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-/* 
-.all-thoughts-wrapper{
+
+.page-wrapper{
   display: flex;
   justify-content: center;
   align-items: center; 
   flex-direction: column;
-  width: 500px;
-} */
+}
