--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #cfdac8;
 }
 
 code {
@@ -16,7 +17,27 @@ code {
 
 /* HERO Section */
 
+.hero{
+  position: relative;
+}
 
+.hero-image {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.hero-title {
+  position: absolute;
+  top: 35%; /* 10% */
+  width: 50%; /*10% */
+  right: 0;
+  bottom: 0;
+  left: 25%; /* 5% */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 /* HERO Section */
@@ -36,7 +57,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px; 
+  margin-top: 40px; 
 }
 
 
@@ -173,14 +194,20 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: red;
+    background: #cfdac8;
   }
 
   .container-body {
-    background: blue;
+    background: #e8eae6;
     width: 50%;
     margin-top: 20px;
     border-radius: 25px;
+  }
+
+  .hero-title {
+    top: 10%; /* 10% */
+    width: 10%; /*10% */
+    left: 5%; /* 5% */
   }
 
   
