--- a/code/src/styles/SendThought.css
+++ b/code/src/styles/SendThought.css
@@ -7,7 +7,7 @@
 
 /*chnage this so it is not called -grey ---> it should have a more explanatory name of WHAT is INSIDE */
 .thoughts-container-grey {
-  width: 100%; /*take this away? Would it be smarter to use border box up where the * {} starts ?? */
+  width: 100%; /*take this away? Would it be better to use border box up where the * {} starts ? */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,7 +83,6 @@
   border: 1px solid #000;
   box-shadow: 5px 5px;
   margin: 20px auto;
-  /* word-wrap: break-word; */
 }
 
 .sent-message {
@@ -103,8 +102,6 @@
   border: none;
   border-radius: 50%;
   outline-color: #f2f0f0;
-  /* padding: 10px 15px; */
-  /* margin: 10px 0 20px 15px; */
   cursor: pointer;
 }
 
