--- a/code/src/index.css
+++ b/code/src/index.css
@@ -54,7 +54,7 @@ main {
   margin: 20px 0 5px 0;
   width: 90%;
   font-size: 16px;
-  word-break: break-all;
+  word-break:keep-all;
   word-wrap: break-word;
 }
 
@@ -132,8 +132,6 @@ main {
 
 .message-form__input {
   height: 50px;
-  word-break: break-word; 
-  word-wrap: normal;
   width: 90%;
   margin-bottom: 10px;
   font-size: 14px;
