--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", , "Oxygen",
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -12,63 +12,88 @@ code {
     monospace;
 }
 .form-wrapper {
-  margin: auto;
+  margin: 0;
   padding: 30px 0;
   width: 300px;
   max-width: 500px;
 }
 .send-message-card {
+  display: block;
   width: 100%;
+  height: 150px;
   background-color: #F2F0F0;
   border: 1px solid #858585;
   box-shadow: 5px 5px #000000;
-  padding: 10px;
-  
+  padding: 15px; 
   font-size: 20px;
+  margin: 10px;
 }
 .input-field { 
-  width: 80%;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  overflow-wrap: break-word; /*  where should I add this??  */
+  width: 100%;
+  overflow-wrap: break-word; 
   background-color: #ffffff;
-  /* padding: 5px 5px 20px 5px; */
+  padding: 5px 5px 20px 5px;
   border: 1px solid #dedcdc;
   font-family:"Roboto";
   font-size: 20px; 
+  box-sizing: border-box;
+  margin-top: 10px;
 }
 .submit-button {
   background-color: #FFADAD;
-  border-radius: 10px;
+  border-radius: 20px;
   border: none;
   font-family: "Roboto";
   font-size: 15px;
-  margin-top: 10px;
+  margin: 10px 0 30px 0;
+  padding: 5px;
 }
-.GET-message {
-  margin: 20px 0;
-  width:100%;
+.received-message-container {
+  margin: 20px 10px;
+  width: 100%;
+  height: auto;
   overflow-wrap: break-word; /* here too? */
   background-color: #ffffff;
   border: 1px solid #858585;
   font-family:"Roboto";
-  padding-left: 10px;
   box-shadow: 5px 5px #000000;
-  padding: 10px;
+  padding: 15px;
   font-size: 20px;
 }
-.date {
-  font-size: 10px;
-  font-style: italic;
-  color: #CDCDCD;
+.received-message{
+  margin: 0;
+  padding-bottom:30px;
+}
+.container-date-and-likes {
   display: flex;
-  justify-content: flex-end;
-  padding-right: 15px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.date {
+  font-size: 12px;
+  color: #CDCDCD;
+  float: inline-end;
+  padding-left: 130px;
+  /* padding-right: 10px; */
 }
 .heart-like-button {
   background-color: #EAEAEA;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  
+  border: none;
+}
+.like-counter {
+  font-size: 12px;
+  padding-left: 10px;
+  color: #ABABAB;
 }
 
+/* @media (max-width: 768px) {
+  .form-wrapper{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+  }
+}  */
