--- a/code/src/index.css
+++ b/code/src/index.css
@@ -29,7 +29,7 @@ code {
   align-items: center;
   padding: 10px;
   margin: 10px;
-  width: 70%;
+  width: 80%;
   border: 2px solid black;
   box-shadow: 6px 6px;
   padding: 10px;
@@ -38,11 +38,12 @@ code {
 }
 
 .happy-card {
-  width: 70%;
+  width: 80%;
   border: 2px solid black;
   box-shadow: 6px 6px;
   padding: 10px;
   margin: 10px;
+  word-wrap: break-word;
 }
 
 .submit-button {
@@ -52,10 +53,37 @@ code {
   margin: 10px;
   display: flex;
   flex-wrap: nowrap;
-  
+
 }
 
 .message-field {
+  margin: 10px;
+  padding: 10px;
+}
+
+.heart-button {
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  background: lightgray;
+}
+
+.heart-button-active {
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  background: rgb(248, 143, 143);
+}
+
+.button-wrapper {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  margin: 10px;
+  align-items: left;
+}
+
+.heart-count {
   margin: 10px;
   padding: 10px;
 }
