--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,33 +19,61 @@ p {
 /** MAIN **/
 .main {
   display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 40px 0px;
+}
+
+.main .container {
+  display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;
+  width: 90%;
 }
 
 /** FORM **/
 .form { 
-  border: solid 1px black;
+  display: flex;
+  flex-direction: column;
+  border: solid 2px rgb(120,119,119);
+  padding: 20px 15px 20px 15px;
+  -webkit-box-shadow: 9px 10px 0px -3px #000000; 
+  box-shadow: 9px 10px 0px -3px #000000;
+  background: rgb(242,240,240);
 }
 
 /* Input field */
 .new-message-label {
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 .new-message-input-field {
-
+  border: solid 1px rgb(201,201,201);
+  width: auto;
+  padding: 10px 10px 30px 10px;
+  margin: 15px 0px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
 }
 
 /* Submit button */
 .submit-button {  
   display: flex;
+  margin-right: auto;
+  padding: 15px 20px;
+  background: rgb(255,173,173);
+  border: rgb(255,173,173);
+  border-radius: 25px;
 }
 
 .submit-button-text {
-
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0px 3px;
 }
-
 
 
 /** MESSAGE LIST **/
@@ -55,44 +83,120 @@ p {
 
 /* Message element */
 .message-element-container {
-  border: solid 1px black;
+  border: solid 2px rgb(120,119,119);
+  padding: 20px 15px 20px 15px;
+  margin: 40px 0px;
+  -webkit-box-shadow: 9px 10px 0px -3px #000000; 
+  box-shadow: 9px 10px 0px -3px #000000;
 }
 
 .message-text {
   font-family: 'Inconsolata', monospace;
   overflow-wrap: break-word;
+  margin: 10px 0px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .message-heart-date-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .message-heart-counter {
-
+  font-family: sans-serif;
+  font-size: 16px;
+  color: rgb(153,153,153);
+  padding: 15px;
 }
 
 .message-date {
-
+  font-family: sans-serif;
+  font-size: 16px;
+  color: rgb(153,153,153);
+  padding: 15px 0px;
+  margin-left: auto;
 }
 
 /* Heart button */
 .heart-button {
-
+  background: rgb(234,234,234);
+  border: rgb(234,234,234);
+  border-radius: 25px;
+  padding: 15px;
 }
-
 
 
 /*** MEDIA QUERIES ***/
 
 /** TABLET **/
 @media (min-width: 768px) {
+  /* Main */
+  .main .container {
+    width: 65%;
+  }
 
+  /* Input field */
+  .new-message-label {
+    font-size: 18px;
+  }
 
+  .new-message-input-field {
+    font-size: 18px;
+  }
+
+  /* Submit button */
+  .submit-button-text {
+    font-size: 18px;
+  }
+
+  /* Message element */
+  .message-text {
+    font-size: 18px;
+  }
+
+  .message-heart-counter {
+    font-size: 18px;
+  }
+
+  .message-date {
+    font-size: 18px;
+  }
 }
 
 
 /** DESKTOP **/
 @media (min-width: 1025px) {
+  /* Main */
+  .main .container {
+    width: 50%;
+  }
 
+  /* Input field */
+  .new-message-label {
+    font-size: 20px;
+  }
+
+  .new-message-input-field {
+    font-size: 20px;
+  }
+
+  /* Submit button */
+  .submit-button-text {
+    font-size: 20px;
+  }
+
+  /* Message element */
+  .message-text {
+    font-size: 20px;
+  }
+
+  .message-heart-counter {
+    font-size: 20px;
+  }
+
+  .message-date {
+    font-size: 20px;
+  }
 }
 
