--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,10 @@
 body {
-  margin: 0;
+  margin: 0 30px;
+  background-color: lightgreen;
+  display: flex; 
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +15,55 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.thoughts-form {
+  width: 330px;
+  border: 1px solid black;
+  box-shadow: 5px 5px black;
+  margin-bottom: 30px;
+  background-color: white;
+}
+
+.thoughts-card {
+  width: 330px;
+  height: 100px;
+  border: 1px solid black;
+  box-shadow: 5px 5px black;
+  padding: 10px;
+  margin-bottom: 30px;
+  box-sizing: border-box;
+  background-color: white;
+}
+
+.message {
+  font-size: 16px;
+  margin: 0;
+}
+
+.heart-time-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.outer-heart-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.inner-heart-container {
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  background-color: #EAEAEA;
+  display: flex;
+  justify-content: center;
+}
+
+.heart-icon {
+  width: 14px;
 }
