removing posted message from input, sorting messages

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,6 +24,14 @@ code {
 }
 
 .input {
+  background-color: whitesmoke;
+  width: 97%;
+  height: 40px;
+  margin-top: 5px;
+}
+
+.input-error {
+  background-color: red;
   width: 97%;
   height: 40px;
   margin-top: 5px;
