--- a/code/src/index.css
+++ b/code/src/index.css
@@ -30,6 +30,27 @@ main {
 
 /* --- MessageList --- */
 
+/*loading symbol*/
+.loading-symbol {
+  margin-top: 30px;
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/**/
+
 .message-list {
   display: flex;
   flex-direction: column;
@@ -49,12 +70,45 @@ main {
   border: solid rgb(158, 158, 158) 0.5px;
 }
 
+/* class for the post just submitted.
+With animations*/
+.message-new {
+  align-self: flex-start;
+  width: 0;
+  opacity: 0;
+  animation: slide 2s forwards;
+}
+
+@keyframes slide {
+  100% {
+    transform: translateX(5%);
+    width: 90%;
+    opacity: 1;
+  }
+}
+
+.message-new .message-info,
+.message-new .message__post {
+  opacity: 0;
+  animation: appear 2s forwards;
+}
+
+@keyframes appear {
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/**/
+
 .message__post {
   display: block;
   margin: 20px 0 5px 0;
   width: 90%;
   font-size: 16px;
-  word-break:keep-all;
+  word-break: keep-all;
   word-wrap: break-word;
 }
 
@@ -100,6 +154,7 @@ main {
   border-radius: 50%;
 }
 
+/* classes depending on if like is cliked or not*/
 .heart-is-false {
   background-color: rgb(242, 242, 243);
 }
@@ -107,6 +162,7 @@ main {
 .heart-is-true {
   background-color: pink;
 }
+/**/
 
 /* --- MessageForm --- */
 
@@ -135,7 +191,7 @@ main {
   width: 90%;
   margin-bottom: 10px;
   font-size: 14px;
-  overflow-y:auto;
+  overflow-y: auto;
 }
 
 .message-form__input-count {
@@ -149,8 +205,8 @@ main {
   margin: 0;
 }
 
-.count-warning{
- color: red;
+.count-warning {
+  color: red;
 }
 
 /* --- SubmitButton --- */
@@ -168,10 +224,10 @@ main {
   border-radius: 20px;
   background-color: pink;
   border: none;
-  outline:none;
+  outline: none;
 }
 
-.submit-btn:focus, 
+.submit-btn:focus,
 .submit-btn:active {
   background-color: rgb(250, 143, 161);
 }
