--- a/code/src/index.css
+++ b/code/src/index.css
@@ -101,8 +101,6 @@ textarea {
 }
 
 .heartButton {
-/*   height: 32px;
-  width: 32px; */
   border: none;
   text-align: center;
   border-radius: 50%;
@@ -111,7 +109,8 @@ textarea {
 }
 
 .heart {
-  font-size: 11px;
+  width: 11px;
+  height: 11px;
 
 }
 
@@ -138,7 +137,8 @@ textarea {
 }
 
 .heart {
-  font-size: 14px;
+  width: 16px;
+  height: 16px;
 }
 
 }
