--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 15px;
 }
 
 code {
@@ -16,16 +17,56 @@ code {
   border: 1px solid black;
   margin: 20px;
   box-shadow: 6px 6px black;
+  padding: 10px;
+  font-family: source-code-pro;
 }
 
-.submit-container {
-  display: flex;
-  flex-direction: column;
+.form-container {
+  background-color: #F2F0F0;
+  letter-spacing: 0.5px;
+}
+
+.main-title {
+  font-weight: 600;
+}
+
+.input-style {
+  padding: 10px 112px 20px 10px;
+  margin-top: 10px;
+  border-color: #DEDEDE;
+  border-style: solid;
+}
+
+.submit-button {
+  border-radius: 20px;
+  margin-top: 10px;
+  background-color: #F0ACAC;
+  padding: 10px;
+  border: none;
+}
+
+.thought-container {
+  letter-spacing: 0.8px;
+}
+
+.happy-thought {
+  font-weight: 600;
 }
 
 .icon-time-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  color: #C5C5C5;
 }
+
+.like-button {
+  padding: 10px;
+  border-radius: 50px;
+  border: none;
+}
+
+
+
 
 
