--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,6 +19,9 @@ code {
   box-shadow: 6px 6px black;
   padding: 10px;
   font-family: source-code-pro;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
 }
 
 .form-container {
