--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,6 +13,53 @@ code {
     monospace;
 }
 
+
+.thought-card {
+  border: 1px solid #000;
+  box-shadow: 7px 7px #000;
+  width: 50vw;
+  margin: 30px auto;
+  padding: 20px 25px 5px;
+  position: relative;
+}
+
+.send-thought_input-field {
+  width: calc(50vw - 50px);
+  height: 60px;
+  padding: 10px;
+  margin: 10px auto 5px auto;
+  resize: none;
+}
+
+.send-thought_button {
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  background: #ffadad;
+  padding: 10px 15px;
+  margin: 0 0 15px 0;
+}
+
+
+.thought-heart_button {
+  cursor: pointer;
+}
+
+.thought-heart_button {
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  padding: 10px 5px;
+}
+
+.thought-heart_button:hover {
+  box-shadow: 0 0 10px rgba(255, 173, 173, 0.8);
+}
+
+.thought-heart_button:active {
+  background: rgba(255, 173, 173, 0.8);
+}
+
 .date-stamp {
   font-size: .7rem;
   font-style: italic;
