--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,11 @@
+html {
+  background: url('https://images.unsplash.com/photo-1610231340700-6583a48addc8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1651&q=80') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,3 +19,258 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 10%;
+}
+
+.form {
+  width: 40%;
+  background-color: #f2f0f0;
+  margin-bottom: 2%;
+  padding-bottom: 1%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  box-shadow: 7px 7px #000000;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+.label-p, .form-input, .submit-button, .thought-post, .hearts-number {
+  margin-left: 4.5%;
+}
+
+.form-input {
+  width: 90%;
+  height: 130%;
+  outline-color: #ffadad;
+  border: 2px solid #b8b7b7;
+  border-radius: 3px;
+  font-size: 15px;
+  resize: none;
+}
+
+.maxlength-words {
+ justify-self: right;
+ margin-top: 30px;
+ margin-right: 30px;
+ /*color: #9a9898;*/
+ font-size: 12px;
+}
+
+.maxlength-words, .time-posted, .multiply, .number-of-hearts {
+color: #9a9898;
+}
+
+.submit-button {
+  width: 50%;
+  height: 80%;
+  border-radius: 25px;
+  border: none;
+  background-color: #ffadad;
+  /*margin-left: 4.5%;*/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 15px;
+}
+
+.submit-button:hover {
+  background-color: #9a9898;
+}
+.heart-icon1{
+  margin-right: 10px;
+}
+.heart-icon2{
+  margin-left: 5px;
+}
+
+.thought-box {
+  border: 1px solid #000000;
+  background-color: #ffffff;
+  box-shadow: 7px 7px #000000;
+  margin-bottom: 2%;
+  padding-bottom: 1%;
+  
+  width: 40%;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.thought-post {
+  width: 90%;
+  
+}
+
+
+
+.details-container {
+  /*display: grid;
+  grid-template-columns: 1fr 1fr ;*/
+  display: inline-flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.heart-box {
+  /*border: none;
+  background-color: #ffffff;
+  isplay: flex;
+  justify-items: center;
+  align-items: center;*/
+  display: inline-flex;
+  
+  justify-content: space-evenly;
+  /*background: #e9e9e9;*/
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  margin-right: 8px;  
+  font-size: 15px; 
+ }
+  
+.like-heart {
+  margin-top: 10px;
+  font-size: 20px;
+  /*margin-left: -1px;*/
+ 
+}
+
+.hearts-number {
+  border:none;
+  background-color: #ffffff;
+  display: flex;
+
+  align-items:center;
+  
+}
+.hearts-amount {
+display: flex;
+
+
+
+
+}
+  
+
+
+.number-of-hearts {
+  /*margin-right:5px;*/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+.multiply {
+  margin-right: 2px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+
+/*
+.heart-box {
+  background-color: #e9e9e9;
+  width: 35px;
+  height:35px;
+  border-radius: 50%;
+  margin-bottom: 20%;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 15px;
+}
+
+.heart-box:hover {
+}
+
+.like-heart {
+ margin-right:4px; 
+}
+*/
+.time-posted {
+  font-size:11px;
+  margin-left: 60%;
+  /*color: #9a9898;*/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+
+
+
+
+
+@media (max-width: 768px){
+  .form {
+    width: 80%;
+    margin-bottom: 4%;
+    /*background-color: #f2f0f0;
+    padding-bottom: 1%;
+    
+    
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    box-shadow: 7px 7px #000000;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;*/
+  }
+  .submit-button {
+    width: 80%;
+    /*height: 80%;
+    border-radius: 25px;
+    border: none;
+    background-color: #ffadad;
+    /*margin-left: 4.5%;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    font-size: 15px;*/
+  }
+  .thought-box {
+    /*border: 1px solid #000000;
+    background-color: #ffffff;
+    box-shadow: 7px 7px #000000;
+    padding-bottom: 1%;*/
+    margin-bottom: 4%;
+    
+    
+    width: 80%;
+    /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+    display: grid;
+    grid-template-rows: 1fr 1fr;*/
+  }
+  .thought-post {
+    width: 50%;
+    
+  }
+ 
+  .time-posted {
+    margin-left: 40%;
+    /*font-size:11px;
+   
+    /*color: #9a9898;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;*/
+  }
+  .footer-text{
+    display: flex;
+    flex-wrap: wrap;
+text-align: center;
+    width: 80%;
+    font-size:
+  }
+}
+
+
