Heartability and remaining characters text implemented

--- a/code/public/style.css
+++ b/code/public/style.css
@@ -65,6 +65,11 @@
     resize: none;
 }
 
+.character-counter {
+    margin-top: -12px;
+    text-align: right;
+}
+
 .send-button {
     display: flex;
     align-items: center;
