--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,42 +2,31 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  
-  /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;*/
 }
 
 .main {
-  margin:20px;
+  margin: 20px;
 }
 
 .form-container {
-border: 1px solid black;
-background-color: rgb(241, 241, 241);
-height: 130px;
-width: 90%;
-padding: 15px;
-box-shadow:  8px 8px black;
+  border: 1px solid black;
+  background-color: rgb(241, 241, 241);
+  height: 130px;
+  width: 90%;
+  padding: 15px;
+  box-shadow: 8px 8px black;
 }
 
 .form-text {
-font-size: 13px;
-font-weight: bold;
+  font-size: 13px;
+  font-weight: bold;
 }
 
 .form-input {
-height: 45px;
-width: 95%;
-border: 2px solid rgb(214, 214, 214);
-margin-top: 10px;
+  height: 45px;
+  width: 95%;
+  border: 2px solid rgb(214, 214, 214);
+  margin-top: 10px;
 }
 
 .button-counter-row {
@@ -45,20 +34,20 @@ margin-top: 10px;
   flex-direction: row;
   justify-content: space-between;
   font-size: 13px;
-
 }
+
 .form-submit-button {
-height: 40px;
-border: none;
-border-radius: 20px;
-background-color: rgb(252, 188, 188);
-padding: 5px 20px;
-margin-top: 10px;
-font-weight: bold;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(252, 188, 188);
+  padding: 5px 20px;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 .characters-counter {
-  display:flex;
+  display: flex;
   text-align: end;
   margin-top: 15px;
 }
@@ -70,13 +59,12 @@ font-weight: bold;
   width: 90%;
   padding: 15px;
   font-size: 14px;
-  box-shadow:  8px 8px black;
+  box-shadow: 8px 8px black;
 }
 
-.thought-message{
+.thought-message {
   margin: 0px;
   height: 70px;
- 
 }
 
 .heart-date-row {
@@ -88,7 +76,6 @@ font-weight: bold;
 .heart-button {
   border: none;
   background-color: white;
-  
   padding: 0;
   color: grey;
   display: flex;
@@ -98,8 +85,16 @@ font-weight: bold;
 .heart {
   padding: 12px;
   margin-right: 10px;
-  background-color: rgb(252, 188, 188);
+  
   border-radius: 50%;
+}
+
+.heart-background-grey {
+  background-color:rgb(204, 204, 204);
+}
+
+.heart-background-pink {
+  background-color: rgb(252, 188, 188);
 }
 
 .date {
@@ -108,15 +103,15 @@ font-weight: bold;
 }
 
 /****MEDIA QUERIES TABLET****/
-@media (min-width: 767px){
+@media (min-width: 767px) {
   .main {
-    margin:50px 80px;
+    margin: 50px 150px;
   }
 }
 
 /****MEDIA QUERIES LAPTOP****/
-@media (min-width: 1024px){
+@media (min-width: 1024px) {
   .main {
-    margin:50px 220px;
+    margin: 50px 300px;
   }
 }
