--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +12,68 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* .form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+} */
+
+.form {
+  width: 500px;
+  height: 180px;
+  background-color: rgb(242, 240, 240);
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.5;
+  font-weight: bolder;
+  letter-spacing: 1px;
+  box-shadow: 10px 10px;
+  margin: 20px;
+  
+}
+
+.thoughts-label {
+  margin: 10px 30px;
+  
+}
+
+.input-thought {
+  width: 85%;
+  height: 60px;
+  margin: 0  30px 2px;
+  border-color: rgb(211, 207, 207);
+}
+
+.send-button {
+  width: 200px;
+  padding: 12px 0px;
+  border-radius: 20px;
+  border: none;
+  
+  background-color: rgb(255, 173, 173);
+  margin: 8px 30px;
+}
+
+span {
+  margin: 0 5px
+}
+
+.thoughts-container {
+  width: 500px;
+  height: 150px;
+  border: 2px solid rgb(71, 71, 71);
+  margin: 20px;
+  box-shadow: 10px 10px;
+}
+
+h4 {
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.5;
+  font-weight: lighter;
 }
