--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,10 +19,27 @@ code {
 
 .thoughts-form {
   width: 330px;
+  height: 130px;
   border: 1px solid black;
   box-shadow: 5px 5px black;
+  padding: 10px;
   margin-bottom: 30px;
-  background-color: white;
+  box-sizing: border-box;
+  background-color: #EAEAEA;
+}
+
+.thoughts-input {
+  width: 300px;
+  height: 40px;
+}
+
+.send-thought-button {
+  width: 160px;
+  height: 30px;
+  border-radius: 15px;
+  border: none;
+  background-color:#FFADAD;
+  margin-top: 10px;
 }
 
 .thoughts-card {
@@ -55,13 +72,15 @@ code {
 
 }
 
-.inner-heart-container {
+.inner-heart-container-button {
   width: 33px;
   height: 33px;
   border-radius: 50%;
   background-color: #EAEAEA;
   display: flex;
   justify-content: center;
+  align-items: center;
+  border: none;
 }
 
 .heart-icon {
