--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 500px;
+  margin: 50px auto 40px auto;
+  padding: 20px;
+  background-color: #f3f1f1;
+  border: 2px solid #000;
+  box-shadow: 6px 6px #000;
+  font-family: cursive,'Source Code Pro', monospace;
+}
+.submit-button {
+  padding: 15px 25px;
+  margin: 15px 0;
+  border-radius: 30px;
+  border: none;
+  background-color: #FFADAD;
+  font-family: cursive,'Source Code Pro', monospace;
+  font-size: 16px;
+}
+
+/* Element container */
+
+.element-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 500px;
+  margin: auto;
+  margin-bottom: 40px;
+  padding: 20px;
+  background-color: #fff;
+  border: 2px solid #000;
+  box-shadow: 6px 6px #000;
+  word-wrap: break-word;
+}
+
+.thought {
+  font-family: cursive;
+  font-size: 18px;
+  /* padding: 20px 10px; */
+}
+
+.like-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.like {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+}
