--- a/code/src/index.css
+++ b/code/src/index.css
@@ -159,19 +159,18 @@ button:focus {
   margin-left: 20px;
   font-size: 60px;
   opacity: 0;
-  animation: heart 1.5s 0.4s;
+  animation: heart 1.5s 0.3s;
 }
 
 @keyframes heart {
   0% {
-    opacity: 0.7;
-  }
-  50% {
-    transform: translateY(20px);
+    opacity: 0.8;
+    transform: translateY(-10px);
   }
   100% {
+    transform: scale(0.7) translateY(70px);
     opacity: 1;
-;  }
+  }
 }
 
 .fa-envelope-open {
