--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/*.heart-button {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  
+}*/
+
+.heart-button:hover { 
+  outline: 0; /* Removes the default outline that appears around the button  when clicking on the heart*/ 
+  background: #fcbacb; /* Changes the color of the circle when clicking on the heart*/
+}
+
+.heart-button-unclicked {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  /*outline:none;*/
+  transition: 0.3s;
+}
+
+.heart-button-clicked {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  transition: 0.3s;
+  background:  #fcbacb;
+}
+
+.heart-button-clicked:focus { 
+  outline: 0; /* Removes the default outline that appears around the button  when clicking on the heart*/ 
+}
+
+.heart {
+  font-size: 20px;
+}
