--- a/code/src/index.css
+++ b/code/src/index.css
@@ -68,6 +68,8 @@ form input {
   font-weight: 500;
   margin-top: 15px;
   padding: 10px 10px 30px;
+  overflow-wrap: break-word;
+  line-break: loose;
 }
 
 .red {
